--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -1,11 +1,20 @@
-* {
+
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
-    width: 100%;
-    height: 100vh;
-    background-color: black;
+    background-color: #fff;
+}
+
+.container {
+    max-width: 1300px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0 40px;
+    background-color: aqua;
 }
