--- a/online-store/src/scss/_header.scss
+++ b/online-store/src/scss/_header.scss
@@ -14,7 +14,7 @@
         font-family: "PT Sans", sans-serif;
         font-weight: 700;
         font-size: 16px;
-        letter-spacing: 3px;
-        color: rgb(62, 61, 61);
+        letter-spacing: 1.5px;
+        color: $primary-grey;
     }
 }
