--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -1,8 +1,11 @@
+// vars
+@import "vars.scss";
+
+// modules
 @import "header.scss";
 
-
 // fonts
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap");
 
 *,
 *::after,
