--- a/online-store/src/scss/_header.scss
+++ b/online-store/src/scss/_header.scss
@@ -17,4 +17,15 @@
         letter-spacing: 1.5px;
         color: $primary-grey;
     }
+    &__card {
+        width: 30px;
+        height: 30px;
+        & > svg {
+            cursor: pointer;
+        }
+        &-icon {
+            fill: $primary-grey;
+            cursor: pointer;
+        }
+    }
 }
