--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -13,6 +13,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    cursor: default;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
 
 body {
