--- a/online-store/src/scss/_header.scss
+++ b/online-store/src/scss/_header.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 80px;
     box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.3);
-
+    background-color: #fff;
     &__flex {
         height: 100%;
         display: flex;
@@ -12,7 +12,6 @@
     }
     &__logo {
         font-family: "PT Sans", sans-serif;
-        font-weight: 700;
         font-size: 16px;
         letter-spacing: 1.5px;
         color: $primary-grey;
