--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -3,9 +3,12 @@
 
 // modules
 @import "header.scss";
+@import "content.scss";
+@import "button.scss";
 
 // fonts
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap");
 
 *,
 *::after,
@@ -26,6 +29,7 @@ svg {
 }
 
 body {
+    font-family: "Nunito", sans-serif;
     background-color: #fff;
 }
 
