feat: add media for .container

--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -39,3 +39,9 @@ body {
     margin: 0 auto;
     padding: 0 40px;
 }
+
+@media screen and (max-width: 480px) {
+    .container {
+        padding: 0 10px;
+    }
+}
