--- a/online-store/src/scss/_content.scss
+++ b/online-store/src/scss/_content.scss
@@ -7,7 +7,7 @@
         display: flex;
     }
     &__settings-container {
-        height: 500px;
+        // height: 500px;
         flex: 0 0 200px;
         padding: 0 15px;
         border: 1px solid black;
@@ -30,10 +30,19 @@
 @media screen and (max-width: 992px) {
     .content {
         &__settings-container {
-            display: none;
+            position: absolute;
+            top: 0;
+            left: -250px;
+            bottom: 0;
+            width: 250px;
+            transition: left .2s ease-in-out;
         }
         &__filter-button-container {
             display: block;
         }
+    }
+    // open settings menu
+    .open {
+        left: 0;
     }
 }
