--- a/online-store/src/scss/_content.scss
+++ b/online-store/src/scss/_content.scss
@@ -1,22 +1,23 @@
 .content {
     min-height: 100vh;
-    padding: 80px 0 0;
+    padding: 80px 0 40px;
 
     &__container {
         padding: 20px 0 0;
         display: flex;
     }
     &__settings-container {
-        // height: 500px;
-        flex: 0 0 200px;
+        flex: 0 0 250px;
         padding: 0 15px;
         border: 1px solid black;
     }
     &__products-container {
-        height: 500px;
         flex: 1 1 auto;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 250px);
+        grid-gap: 20px;
+        justify-content: center;
         padding: 0 15px;
-        border: 1px solid black;
     }
     &__filter-button-container {
         display: none;
@@ -27,15 +28,16 @@
     }
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1180px) {
     .content {
         &__settings-container {
-            position: absolute;
+            position: fixed;
             top: 0;
-            left: -250px;
+            left: -300px;
             bottom: 0;
-            width: 250px;
-            transition: left .2s ease-in-out;
+            width: 300px;
+            background-color: black;
+            transition: left 0.2s ease-in-out;
         }
         &__filter-button-container {
             display: block;
