--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -2,9 +2,10 @@
 @import "vars.scss";
 
 // modules
+@import "button.scss";
 @import "header.scss";
 @import "content.scss";
-@import "button.scss";
+@import "product.scss";
 
 // fonts
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap");
