--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -9,7 +9,7 @@
 
 // fonts
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 
 *,
 *::after,
