--- a/online-store/src/scss/_vars.scss
+++ b/online-store/src/scss/_vars.scss
@@ -1,3 +1,5 @@
 $primary-grey: rgb(62, 61, 61);
 $primary-green: rgb(8, 120, 85);
 $hover-green: rgb(6, 134, 93);
+$primary-red: rgb(208, 56, 56);
+$hover-red: rgb(237, 68, 68);
