--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -41,6 +41,10 @@ body {
     padding: 0 40px;
 }
 
+.display-none {
+    display: none;
+}
+
 @media screen and (max-width: 480px) {
     .container {
         padding: 0 10px;
