feat: add readme content

--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -6,6 +6,7 @@
 @import "header.scss";
 @import "content.scss";
 @import "product.scss";
+@import "modal.scss";
 
 // fonts
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap");
