--- a/online-store/src/scss/_content.scss
+++ b/online-store/src/scss/_content.scss
@@ -35,8 +35,10 @@
             left: -300px;
             bottom: 0;
             width: 300px;
-            background-color: black;
+            background-color: #fff;
+            border-right: 1px solid #000;
             transition: left 0.2s ease-in-out;
+            padding: 30px 0 0 20px;
         }
         &__filter-button-container {
             display: block;
