feat: add checking quantity in addTocard in Model

--- a/online-store/src/scss/_product.scss
+++ b/online-store/src/scss/_product.scss
@@ -19,3 +19,9 @@
         align-items: center;
     }
 }
+
+.no-available {
+    font-size: 20px;
+    color: $primary-red;
+    text-align: center;
+}
