feat: install nouislider

--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -7,6 +7,7 @@
 @import "content.scss";
 @import "product.scss";
 @import "modal.scss";
+@import "../../node_modules/nouislider/dist/nouislider.min.css";
 
 // fonts
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap");
