--- a/online-store/src/scss/_content.scss
+++ b/online-store/src/scss/_content.scss
@@ -1,7 +1,5 @@
 .content {
-    min-height: 100vh;
     padding: 80px 0 40px;
-
     &__container {
         padding: 20px 0 0;
         display: flex;
@@ -9,6 +7,9 @@
     &__settings-container {
         flex: 0 0 250px;
         padding: 0 15px;
+        & > div {
+            margin-bottom: 20px;
+        }
     }
     &__products-container {
         flex: 1 1 auto;
@@ -38,7 +39,7 @@
             background-color: #fff;
             border-right: 1px solid #000;
             transition: left 0.2s ease-in-out;
-            padding: 30px 0 0 20px;
+            padding: 30px 20px;
         }
         &__filter-button-container {
             display: block;
