--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -22,6 +22,21 @@
     cursor: default;
 }
 
+.element::-webkit-scrollbar {
+    width: 0;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+}
+
+.input-text {
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
+    font-family: inherit;
+}
+
 img {
     width: 100%;
     height: 100%;
