--- a/online-store/src/scss/_content.scss
+++ b/online-store/src/scss/_content.scss
@@ -10,6 +10,17 @@
         & > div {
             margin-bottom: 20px;
         }
+        & #settings-sort-container {
+            & span {
+                font-size: 20px;
+                margin-bottom: 10px;
+                margin-right: 10px;
+                cursor: pointer;
+                &:hover {
+                    background-color: rgba($color: $primary-green, $alpha: 0.1);
+                }
+            }
+        }
     }
     &__products-container {
         flex: 1 1 auto;
