--- a/online-store/src/scss/index.scss
+++ b/online-store/src/scss/index.scss
@@ -62,6 +62,22 @@ body {
     display: none;
 }
 
+.arrow {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+}
+.up {
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+
+.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
 @media screen and (max-width: 480px) {
     .container {
         padding: 0 10px;
