--- a/migration-to-typescript/src/components/view/sources/sources.css
+++ b/migration-to-typescript/src/components/view/sources/sources.css
@@ -31,4 +31,39 @@
 .source__item-name {
     font-weight: 400;
     white-space: nowrap;
+    margin: 0 auto;
+}
+
+.sources::-webkit-scrollbar {
+    width: 0;
+}
+
+
+@media screen and (max-width: 480px) {
+    .sources {
+        padding: 30px 0;
+        background-color: #17181c;
+        flex-wrap: nowrap;
+        width: 100%;
+        height: 120px;
+        overflow: auto;
+        align-items: center;
+        font: 300 1em 'Fira Sans', sans-serif;
+    }
+
+    .source__item {
+        background: none;
+        border: 1px solid #30c5ff;
+        font: inherit;
+        line-height: 1;
+        margin: 0.3em;
+        padding: 0.5em 1em;
+        color: #70d6ff;
+        transition: 0.25s;
+        cursor: pointer;
+    }
+
+
+
+
 }
