--- a/async-race/src/scripts/components/Button/Button.css
+++ b/async-race/src/scripts/components/Button/Button.css
@@ -1,6 +1,7 @@
 .button {
     display: block;
     padding: 0.6rem 2rem;
+    margin: 0.2rem;
     font-size: 2rem;
     box-sizing: content-box;
     font-weight: 700;
