--- a/async-race/src/scripts/components/Button/Button.css
+++ b/async-race/src/scripts/components/Button/Button.css
@@ -1,15 +1,13 @@
 .button {
-    display: block;
-    padding: 0.6rem 2rem;
+    padding: 0 2rem;
     margin: 0.2rem;
+    height: 4rem;
     font-size: 2rem;
-    box-sizing: content-box;
     font-weight: 700;
     cursor: pointer;
     border: none;
     border-bottom: 0.5rem solid;
     border-radius: 0.5rem;
-    float: left;
 }
 
 .green {
@@ -22,7 +20,13 @@
     border-color: #427ae5;
 }
 
+.button:disabled {
+    background-color: rgb(255, 255, 255);
+    border-bottom: 0.5rem solid #7f848d;
+}
+
 .button:active {
     border-bottom: none;
+    height: 3.5rem;
     transform: translateY(0.3rem);
 }
