--- a/async-race/src/scripts/components/Button/Button.css
+++ b/async-race/src/scripts/components/Button/Button.css
@@ -20,13 +20,18 @@
     border-color: #427ae5;
 }
 
+.button:active {
+    border-bottom: none;
+    height: 3.5rem;
+    transform: translateY(0.3rem);
+}
+
 .button:disabled {
     background-color: rgb(255, 255, 255);
     border-bottom: 0.5rem solid #7f848d;
 }
 
-.button:active {
-    border-bottom: none;
-    height: 3.5rem;
-    transform: translateY(0.3rem);
+.button:disabled:active {
+    height: 4rem;
+    transform: translateY(0);
 }
