--- a/async-race/src/scripts/components/Button/Button.css
+++ b/async-race/src/scripts/components/Button/Button.css
@@ -1,13 +1,25 @@
 .button {
+    font-weight: 700;
+    cursor: pointer;
+    border: none;
+}
+
+.big {
     padding: 0 2rem;
     margin: 0.2rem;
     height: 4rem;
     font-size: 2rem;
-    font-weight: 700;
-    cursor: pointer;
-    border: none;
     border-bottom: 0.5rem solid;
     border-radius: 0.5rem;
+}
+
+.small {
+    padding: 0 1rem;
+    margin: 0.1rem;
+    height: 3rem;
+    font-size: 1.6rem;
+    border-bottom: 0.3rem solid;
+    border-radius: 0.3rem;
 }
 
 .green {
@@ -19,9 +31,10 @@
     background-color: #e3edf7;
     border-color: #427ae5;
 }
+
 .red {
-    background-color: #ed5454;
-    border-color: #ae1e1e;
+    background-color: #e87979;
+    border-color: #c21a1a;
 }
 
 .button:active {
@@ -29,6 +42,13 @@
     height: 3.5rem;
     transform: translateY(0.3rem);
 }
+
+.button.small:active {
+    border-bottom: none;
+    height: 2.7rem;
+    transform: translateY(0.1rem);
+}
+
 
 .button:disabled {
     background-color: rgb(255, 255, 255);
