--- a/async-race/src/scripts/components/Form/Form.css
+++ b/async-race/src/scripts/components/Form/Form.css
@@ -59,3 +59,29 @@
     height: 4rem;
     transform: translateY(0);
 }
+
+.small-text-input {
+    border-bottom: 0.3rem solid #427ae5;
+    height: 3rem;
+    width: 15rem;
+    margin: 0 0.1rem;
+    
+}
+
+.small-text-input:focus {
+    height: 2.7rem;
+    width: 15rem;
+    transform: translateY(0.1rem);
+}
+
+.small-color-input {
+    border-bottom: 0.3rem solid #427ae5;
+    height: 3rem;
+    width: 3rem;
+    margin: 0 0.1rem;
+}
+
+.small-color-input:active {
+    height: 2.7rem;
+    transform: translateY(0.1rem);
+}
