--- a/async-race/src/scripts/components/Car/Car.css
+++ b/async-race/src/scripts/components/Car/Car.css
@@ -1,13 +1,24 @@
 .car {
-    display: flex;
-    align-items: center;
-    height: 100px;
+    /* display: flex;
+    align-items: center; */
+    /* height: 100px; */
 }
 
+.car-container {
+    display: flex;
+    align-items: flex-end;
+    height: 5rem;
+    font-size: 1.6rem;
+    border-bottom: 0.2rem #ffffff dashed;
+    margin-bottom: 1rem ;
+}
+
+
 .car-name {
-    width: 150px;
+    width: 10rem;
     margin: 0 5px;
     overflow: hidden;
     text-align: center;
     text-overflow: ellipsis;
+    align-self: center;
 }
