--- a/async-race/src/scripts/app.css
+++ b/async-race/src/scripts/app.css
@@ -3,6 +3,7 @@
     width: 100%;
     background-color: #000;
     color: #fff;
+    overflow: auto;
     font-size: 2rem;
 }
 
@@ -11,9 +12,11 @@
     max-width: 1280px;
 }
 
+
 .hidden-view {
     visibility: hidden;
     height: 0;
+    overflow: hidden;
 }
 
 .main {
